--- a/FlappyBlock/flappy-home.html
+++ b/FlappyBlock/flappy-home.html
@@ -12,8 +12,8 @@
     <script src="js/class-manager/class-manager.js"></script>
     <script src="js/input-manager/input-manager.js"></script>
     <script src="js/holes-logic/holes-logic.js"></script>
-    <script src="js/food/food.js"></script>
-    <script src="js/snake/snake.js"></script>
+    <script src="js/flapper/flapper.js"></script>
+    <script src="js/pipes/pipes.js"></script>
     <script src="js/board-manager/board-manager.js"></script>
     <script src="js/game-logic/game-logic.js"></script>
     <script src="js/debugging/debugging.js"></script>
